--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=root
 spring.datasource.password=3305
 spring.jpa.show-sql=true
 spring.mvc.hiddenmethod.filter.enabled=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.main.allow-circular-references=true
